// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: CheckBoxField should render a checkbox field 1`] = `
<DocumentFragment>
  .c7 {
  vertical-align: middle;
}

.c5 {
  opacity: 0;
  border: 0;
  width: 0;
  height: 0;
  position: absolute;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  border: 1px solid;
  border-color: hsl(200,10%,20%);
  background: none;
  border-radius: 1px;
}

.c6 svg {
  margin: 1px;
}

.c6 svg {
  visibility: hidden;
  display: block;
  color: hsl(0,0%,100%);
  width: 12px;
  height: 12px;
}

.c4 {
  position: relative;
  display: inline-block;
  vertical-align: -1px;
  width: 16px;
  height: 16px;
  line-height: 16px;
  cursor: pointer;
}

.c4 input:checked ~ span {
  border-color: hsl(200,96%,35%);
  background-color: hsl(200,96%,35%);
}

.c4 input:checked ~ span svg {
  visibility: visible;
}

.c4 input:focus ~ span {
  box-shadow: 0px 3px 8px hsla(200,96%,35%,0.3);
}

.c1 + .c0 {
  margin-top: 16px;
}

.c9 {
  font-size: 18px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(200,10%,20%);
}

.c3 + .c2 {
  margin-top: 8px;
}

.c3 .c8 {
  cursor: pointer;
  padding-left: 8px;
}

<div
    class="c0 c1 c2 c3"
  >
    <label
      class="c4"
      for="my-id"
    >
      <input
        class="c5"
        id="my-id"
        name="checkbox-test"
        type="checkbox"
      />
      <span
        aria-hidden="true"
        class="c6"
      >
        <svg
          class="c7"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M9.81384674,19.7396292 C9.5249491,19.7396292 9.24415138,19.6325301 9.02725315,19.4381317 L3.38789908,14.3504731 C2.906403,13.9166766 2.86770331,13.1741827 3.30239977,12.6926866 C3.73619624,12.2120905 4.47869019,12.1724908 4.96018627,12.6071873 L9.67974783,16.8641526 L18.9127726,5.4369457 C19.3204693,4.93204981 20.0593633,4.85285046 20.5642592,5.26144713 C21.0682551,5.66914381 21.1465544,6.40803779 20.7388578,6.91293368 L10.7273393,19.3040328 C10.524841,19.5542307 10.2269434,19.7108295 9.90654599,19.7369292 C9.87504624,19.7387292 9.84444649,19.7396292 9.81384674,19.7396292"
          />
        </svg>
      </span>
    </label>
    <label
      class="c8 c9"
      for="my-id"
    >
      SoIA
    </label>
  </div>
</DocumentFragment>
`;

exports[`component: CheckBoxField should render a disabled checkbox field 1`] = `
<DocumentFragment>
  .c7 {
  vertical-align: middle;
}

.c5 {
  opacity: 0;
  border: 0;
  width: 0;
  height: 0;
  position: absolute;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  border: 1px solid;
  border-color: hsl(0,0%,90%);
  background: hsl(0,0%,90%);
  border-radius: 1px;
}

.c6 svg {
  margin: 1px;
}

.c6 svg {
  visibility: hidden;
  display: block;
  color: hsl(0,0%,100%);
  width: 12px;
  height: 12px;
}

.c4 {
  position: relative;
  display: inline-block;
  vertical-align: -1px;
  width: 16px;
  height: 16px;
  line-height: 16px;
  cursor: cursor;
}

.c4 input:checked ~ span svg {
  visibility: visible;
}

.c4 input:focus ~ span {
  box-shadow: 0px 3px 8px hsla(200,96%,35%,0.3);
}

.c1 + .c0 {
  margin-top: 16px;
}

.c9 {
  font-size: 18px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(200,10%,20%);
}

.c10 + .c2 {
  margin-top: 8px;
}

.c10 .c8 {
  cursor: pointer;
  padding-left: 8px;
}

.c3 + .c2 {
  margin-top: 8px;
}

.c3 .c8 {
  cursor: not-allowed;
  padding-left: 8px;
}

<div
    class="c0 c1 c2 c3"
  >
    <label
      class="c4"
      for="my-id"
    >
      <input
        class="c5"
        disabled=""
        id="my-id"
        name="checkbox-test"
        type="checkbox"
      />
      <span
        aria-hidden="true"
        class="c6"
        disabled=""
      >
        <svg
          class="c7"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M9.81384674,19.7396292 C9.5249491,19.7396292 9.24415138,19.6325301 9.02725315,19.4381317 L3.38789908,14.3504731 C2.906403,13.9166766 2.86770331,13.1741827 3.30239977,12.6926866 C3.73619624,12.2120905 4.47869019,12.1724908 4.96018627,12.6071873 L9.67974783,16.8641526 L18.9127726,5.4369457 C19.3204693,4.93204981 20.0593633,4.85285046 20.5642592,5.26144713 C21.0682551,5.66914381 21.1465544,6.40803779 20.7388578,6.91293368 L10.7273393,19.3040328 C10.524841,19.5542307 10.2269434,19.7108295 9.90654599,19.7369292 C9.87504624,19.7387292 9.84444649,19.7396292 9.81384674,19.7396292"
          />
        </svg>
      </span>
    </label>
    <label
      class="c8 c9"
      for="my-id"
    >
      NMNL
    </label>
  </div>
</DocumentFragment>
`;

exports[`component: CheckBoxField should support margin space props 1`] = `
<DocumentFragment>
  .c7 {
  vertical-align: middle;
}

.c5 {
  opacity: 0;
  border: 0;
  width: 0;
  height: 0;
  position: absolute;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  border: 1px solid;
  border-color: hsl(200,10%,20%);
  background: none;
  border-radius: 1px;
}

.c6 svg {
  margin: 1px;
}

.c6 svg {
  visibility: hidden;
  display: block;
  color: hsl(0,0%,100%);
  width: 12px;
  height: 12px;
}

.c4 {
  position: relative;
  display: inline-block;
  vertical-align: -1px;
  width: 16px;
  height: 16px;
  line-height: 16px;
  cursor: pointer;
}

.c4 input:checked ~ span {
  border-color: hsl(200,96%,35%);
  background-color: hsl(200,96%,35%);
}

.c4 input:checked ~ span svg {
  visibility: visible;
}

.c4 input:focus ~ span {
  box-shadow: 0px 3px 8px hsla(200,96%,35%,0.3);
}

.c1 + .c0 {
  margin-top: 16px;
}

.c9 {
  font-size: 18px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(200,10%,20%);
}

.c10 + .c2 {
  margin-top: 8px;
}

.c10 .c8 {
  cursor: pointer;
  padding-left: 8px;
}

.c11 + .c2 {
  margin-top: 8px;
}

.c11 .c8 {
  cursor: not-allowed;
  padding-left: 8px;
}

.c3 {
  margin-right: 8px;
}

.c3 + .c2 {
  margin-top: 8px;
}

.c3 .c8 {
  cursor: pointer;
  padding-left: 8px;
}

<div
    class="c0 c1 c2 c3"
  >
    <label
      class="c4"
      for="not-random"
    >
      <input
        class="c5"
        id="not-random"
        name="space_props"
        type="checkbox"
      />
      <span
        aria-hidden="true"
        class="c6"
      >
        <svg
          class="c7"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M9.81384674,19.7396292 C9.5249491,19.7396292 9.24415138,19.6325301 9.02725315,19.4381317 L3.38789908,14.3504731 C2.906403,13.9166766 2.86770331,13.1741827 3.30239977,12.6926866 C3.73619624,12.2120905 4.47869019,12.1724908 4.96018627,12.6071873 L9.67974783,16.8641526 L18.9127726,5.4369457 C19.3204693,4.93204981 20.0593633,4.85285046 20.5642592,5.26144713 C21.0682551,5.66914381 21.1465544,6.40803779 20.7388578,6.91293368 L10.7273393,19.3040328 C10.524841,19.5542307 10.2269434,19.7108295 9.90654599,19.7369292 C9.87504624,19.7387292 9.84444649,19.7396292 9.81384674,19.7396292"
          />
        </svg>
      </span>
    </label>
    <label
      class="c8 c9"
      for="not-random"
    >
      space props
    </label>
  </div>
</DocumentFragment>
`;
